--- a/test-output/index.html
+++ b/test-output/index.html
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">8 methods,   8 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,32 +104,7 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyOrganizationLocations" class="method navigator-link" hash-for-method="verifyAddLocationOnlyWithMandatoryData">verifyAddLocationOnlyWithMandatoryData</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyOrganizationLocations" class="method navigator-link" hash-for-method="verifyAddLocationWithAllDataFields(Test Location 001, Sri Lanka, Colombo, Bambalapitiya, Test Address 001, 11558, 0112354329, 011235009...)">verifyAddLocationWithAllDataFields(Test Location 001, Sri Lanka, Colombo, Bambalapitiya, Test Address 001, 11558, 0112354329, 011235009...)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyOrganizationLocations" class="method navigator-link" hash-for-method="verifyAddLocationWithAllDataFields(Test Location 002, Bahamas, Bahamas State, Test City 002, Test Address 002, 34226, 0112354330, 01123...)">verifyAddLocationWithAllDataFields(Test Location 002, Bahamas, Bahamas State, Test City 002, Test Address 002, 34226, 0112354330, 01123...)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyOrganizationLocations" class="method navigator-link" hash-for-method="verifyAddLocationWithAllDataFields(Test Location 004, Belize, Belize State, Test City 004, Test Address 004, 64312, 0112354332, 0112350...)">verifyAddLocationWithAllDataFields(Test Location 004, Belize, Belize State, Test City 004, Test Address 004, 64312, 0112354332, 0112350...)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyOrganizationLocations" class="method navigator-link" hash-for-method="verifyAddLocationWithAllDataFields(Test Location 005, India, Maharashta, Mumbai, Test Address 005, 11321, 0112354333, 0112350094, TestN...)">verifyAddLocationWithAllDataFields(Test Location 005, India, Maharashta, Mumbai, Test Address 005, 11321, 0112354333, 0112350094, TestN...)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyOrganizationLocations" class="method navigator-link" hash-for-method="verifyAddLocationWithAllDataFields(Test Location 003, Canada, British Columbia, Waterloo, Test Address 003, 56894, 0112354331, 01123500...)">verifyAddLocationWithAllDataFields(Test Location 003, Canada, British Columbia, Waterloo, Test Address 003, 56894, 0112354331, 01123500...)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyQualificationSkills" class="method navigator-link" hash-for-method="aaa">aaa</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -157,54 +132,14 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.maven.testng.VerifyOrganizationLocations</span>
+              <span class="class-name">com.maven.testng.VerifyQualificationSkills</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyAddLocationOnlyWithMandatoryData">
-                  </a> <!-- verifyAddLocationOnlyWithMandatoryData -->
-                  <span class="method-name">verifyAddLocationOnlyWithMandatoryData</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyAddLocationWithAllDataFields(Test Location 001, Sri Lanka, Colombo, Bambalapitiya, Test Address 001, 11558, 0112354329, 011235009...)">
-                  </a> <!-- verifyAddLocationWithAllDataFields(Test Location 001, Sri Lanka, Colombo, Bambalapitiya, Test Address 001, 11558, 0112354329, 011235009...) -->
-                  <span class="method-name">verifyAddLocationWithAllDataFields</span>
-                  <span class="parameters">(Test Location 001, Sri Lanka, Colombo, Bambalapitiya, Test Address 001, 11558, 0112354329, 0112350090, TestNote 001)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyAddLocationWithAllDataFields(Test Location 002, Bahamas, Bahamas State, Test City 002, Test Address 002, 34226, 0112354330, 01123...)">
-                  </a> <!-- verifyAddLocationWithAllDataFields(Test Location 002, Bahamas, Bahamas State, Test City 002, Test Address 002, 34226, 0112354330, 01123...) -->
-                  <span class="method-name">verifyAddLocationWithAllDataFields</span>
-                  <span class="parameters">(Test Location 002, Bahamas, Bahamas State, Test City 002, Test Address 002, 34226, 0112354330, 0112350091, TestNote 002)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyAddLocationWithAllDataFields(Test Location 004, Belize, Belize State, Test City 004, Test Address 004, 64312, 0112354332, 0112350...)">
-                  </a> <!-- verifyAddLocationWithAllDataFields(Test Location 004, Belize, Belize State, Test City 004, Test Address 004, 64312, 0112354332, 0112350...) -->
-                  <span class="method-name">verifyAddLocationWithAllDataFields</span>
-                  <span class="parameters">(Test Location 004, Belize, Belize State, Test City 004, Test Address 004, 64312, 0112354332, 0112350093, TestNote 004)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyAddLocationWithAllDataFields(Test Location 005, India, Maharashta, Mumbai, Test Address 005, 11321, 0112354333, 0112350094, TestN...)">
-                  </a> <!-- verifyAddLocationWithAllDataFields(Test Location 005, India, Maharashta, Mumbai, Test Address 005, 11321, 0112354333, 0112350094, TestN...) -->
-                  <span class="method-name">verifyAddLocationWithAllDataFields</span>
-                  <span class="parameters">(Test Location 005, India, Maharashta, Mumbai, Test Address 005, 11321, 0112354333, 0112350094, TestNote 005)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyAddLocationWithAllDataFields(Test Location 003, Canada, British Columbia, Waterloo, Test Address 003, 56894, 0112354331, 01123500...)">
-                  </a> <!-- verifyAddLocationWithAllDataFields(Test Location 003, Canada, British Columbia, Waterloo, Test Address 003, 56894, 0112354331, 01123500...) -->
-                  <span class="method-name">verifyAddLocationWithAllDataFields</span>
-                  <span class="parameters">(Test Location 003, Canada, British Columbia, Waterloo, Test Address 003, 56894, 0112354331, 0112350092, TestNote 003)</span>
+                  <a name="aaa">
+                  </a> <!-- aaa -->
+                  <span class="method-name">aaa</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -244,7 +179,7 @@
   &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.maven.testng.VerifyLoginTest&quot;/&gt;
-      &lt;class name=&quot;com.maven.testng.VerifyOrganizationLocations&quot;/&gt;
+      &lt;class name=&quot;com.maven.testng.VerifyQualificationSkills&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -284,44 +219,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(8);
+data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'verifyLoginWithCorrectCredentials')
 data.setCell(0, 2, 'com.maven.testng.VerifyLoginTest')
-data.setCell(0, 3, 4839);
+data.setCell(0, 3, 5542);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'verifyAddLocationWithAllDataFields')
-data.setCell(1, 2, 'com.maven.testng.VerifyOrganizationLocations')
-data.setCell(1, 3, 2621);
+data.setCell(1, 1, 'aaa')
+data.setCell(1, 2, 'com.maven.testng.VerifyQualificationSkills')
+data.setCell(1, 3, 3188);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'verifyAddLocationWithAllDataFields')
-data.setCell(2, 2, 'com.maven.testng.VerifyOrganizationLocations')
-data.setCell(2, 3, 2404);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'verifyAddLocationWithAllDataFields')
-data.setCell(3, 2, 'com.maven.testng.VerifyOrganizationLocations')
-data.setCell(3, 3, 2375);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'verifyAddLocationWithAllDataFields')
-data.setCell(4, 2, 'com.maven.testng.VerifyOrganizationLocations')
-data.setCell(4, 3, 2319);
-data.setCell(5, 0, 5)
-data.setCell(5, 1, 'verifyAddLocationWithAllDataFields')
-data.setCell(5, 2, 'com.maven.testng.VerifyOrganizationLocations')
-data.setCell(5, 3, 2308);
-data.setCell(6, 0, 6)
-data.setCell(6, 1, 'verifyAddLocationOnlyWithMandatoryData')
-data.setCell(6, 2, 'com.maven.testng.VerifyOrganizationLocations')
-data.setCell(6, 3, 2258);
-data.setCell(7, 0, 7)
-data.setCell(7, 1, 'verifyLoginErrorMessage')
-data.setCell(7, 2, 'com.maven.testng.VerifyLoginTest')
-data.setCell(7, 3, 1648);
+data.setCell(2, 1, 'verifyLoginErrorMessage')
+data.setCell(2, 2, 'com.maven.testng.VerifyLoginTest')
+data.setCell(2, 3, 1717);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 20 seconds</span>
+              <span class="suite-total-time">Total running time: 10 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -354,49 +269,25 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">verifyLoginErrorMessage</span>
-                <span class="method-start">4654 ms</span>
+                <span class="method-start">4503 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyLoginWithCorrectCredentials</span>
-                <span class="method-start">6305 ms</span>
+                <span class="method-start">6222 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
-              <div class="chronological-class-name">com.maven.testng.VerifyOrganizationLocations</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
-                <span class="method-name">navigateToOrganizationLocations</span>
-                <span class="method-start">11145 ms</span>
-              </div> <!-- configuration-class before -->
+              <div class="chronological-class-name">com.maven.testng.VerifyQualificationSkills</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">verifyAddLocationOnlyWithMandatoryData</span>
-                <span class="method-start">16205 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">verifyAddLocationWithAllDataFields(Test Location 001, Sri Lanka, Colombo, Bambalapitiya, Test Address 001, 11558, 0112354329, 011235009...)</span>
-                <span class="method-start">18550 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">verifyAddLocationWithAllDataFields(Test Location 002, Bahamas, Bahamas State, Test City 002, Test Address 002, 34226, 0112354330, 01123...)</span>
-                <span class="method-start">20870 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">verifyAddLocationWithAllDataFields(Test Location 003, Canada, British Columbia, Waterloo, Test Address 003, 56894, 0112354331, 01123500...)</span>
-                <span class="method-start">23275 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">verifyAddLocationWithAllDataFields(Test Location 004, Belize, Belize State, Test City 004, Test Address 004, 64312, 0112354332, 0112350...)</span>
-                <span class="method-start">25651 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">verifyAddLocationWithAllDataFields(Test Location 005, India, Maharashta, Mumbai, Test Address 005, 11321, 0112354333, 0112350094, TestN...)</span>
-                <span class="method-start">27960 ms</span>
+                <span class="method-name">aaa</span>
+                <span class="method-start">11765 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.maven.testng.VerifyLoginTest</div> <!-- chronological-class-name -->
               <div class="configuration-test after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">30582 ms</span>
+                <span class="method-start">14954 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
