--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -30,26 +30,18 @@
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
-<td>com.maven.testng.VerifyOrganizationLocations</td>
+<td>com.maven.testng.VerifyQualificationSkills</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyAddLocationOnlyWithMandatoryData</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyAddLocationWithAllDataFields</td>
+<td>aaa</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>navigateToOrganizationLocations</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
