--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,26 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b46fba">  <td>21/07/26 19:49:01</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@69653e16]">&gt;&gt;getURL</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@263053820</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/26 19:49:06</td>   <td>4643</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@69653e16]">verifyLoginErrorMessage</td> 
-  <td>main@263053820</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/26 19:49:07</td>   <td>6294</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@69653e16]">verifyLoginWithCorrectCredentials</td> 
-  <td>main@263053820</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/26 19:49:12</td>   <td>11134</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyOrganizationLocations.navigateToOrganizationLocations()[pri:0, instance:com.maven.testng.VerifyOrganizationLocations@758705fa]">&gt;&gt;navigateToOrganizationLocations</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@263053820</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/26 19:49:17</td>   <td>16194</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyOrganizationLocations.verifyAddLocationOnlyWithMandatoryData()[pri:1, instance:com.maven.testng.VerifyOrganizationLocations@758705fa]">verifyAddLocationOnlyWithMandatoryData</td> 
-  <td>main@263053820</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/26 19:49:19</td>   <td>18539</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyOrganizationLocations.verifyAddLocationWithAllDataFields(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.maven.testng.VerifyOrganizationLocations@758705fa]">verifyAddLocationWithAllDataFields</td> 
-  <td>main@263053820</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/26 19:49:22</td>   <td>20859</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyOrganizationLocations.verifyAddLocationWithAllDataFields(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.maven.testng.VerifyOrganizationLocations@758705fa]">verifyAddLocationWithAllDataFields</td> 
-  <td>main@263053820</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/26 19:49:24</td>   <td>23264</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyOrganizationLocations.verifyAddLocationWithAllDataFields(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.maven.testng.VerifyOrganizationLocations@758705fa]">verifyAddLocationWithAllDataFields</td> 
-  <td>main@263053820</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/26 19:49:27</td>   <td>25640</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyOrganizationLocations.verifyAddLocationWithAllDataFields(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.maven.testng.VerifyOrganizationLocations@758705fa]">verifyAddLocationWithAllDataFields</td> 
-  <td>main@263053820</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/26 19:49:29</td>   <td>27949</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyOrganizationLocations.verifyAddLocationWithAllDataFields(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.maven.testng.VerifyOrganizationLocations@758705fa]">verifyAddLocationWithAllDataFields</td> 
-  <td>main@263053820</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/26 19:49:32</td>   <td>30571</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@69653e16]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@263053820</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/27 08:05:56</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@32193bea]">&gt;&gt;getURL</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1643141512</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/27 08:06:01</td>   <td>4499</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@32193bea]">verifyLoginErrorMessage</td> 
+  <td>main@1643141512</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/27 08:06:02</td>   <td>6218</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@32193bea]">verifyLoginWithCorrectCredentials</td> 
+  <td>main@1643141512</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/27 08:06:08</td>   <td>11761</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationSkills.aaa()[pri:0, instance:com.maven.testng.VerifyQualificationSkills@6b8d96d9]">aaa</td> 
+  <td>main@1643141512</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/27 08:06:11</td>   <td>14950</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@32193bea]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1643141512</td>   <td></td> </tr>
 </table>
